--- a/ompi/mpi/cxx/libmpi_cxx.vcxproj
+++ b/ompi/mpi/cxx/libmpi_cxx.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -56,33 +56,33 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-    <PropertyGroup>
-      <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">F:\ProjectExt\ompi-examples\Debug\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libmpi_cxx.dir\Debug\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libmpi_cxxd</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">F:\ProjectExt\ompi-examples\Release\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libmpi_cxx.dir\Release\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libmpi_cxx</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</GenerateManifest>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">F:\ProjectExt\ompi-examples\MinSizeRel\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">libmpi_cxx.dir\MinSizeRel\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">libmpi_cxx</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">true</GenerateManifest>
-      <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">F:\ProjectExt\ompi-examples\RelWithDebInfo\</OutDir>
-      <IntDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">libmpi_cxx.dir\RelWithDebInfo\</IntDir>
-      <TargetName Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">libmpi_cxx</TargetName>
-      <TargetExt Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">.dll</TargetExt>
-      <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">true</LinkIncremental>
-      <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">true</GenerateManifest>
-    </PropertyGroup>
+  <PropertyGroup>
+    <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">F:\ProjectExt\ompi-examples\Debug\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libmpi_cxx.dir\Debug\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libmpi_cxxd</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">F:\ProjectExt\ompi-examples\Release\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libmpi_cxx.dir\Release\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libmpi_cxx</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</GenerateManifest>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">F:\ProjectExt\ompi-examples\MinSizeRel\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">libmpi_cxx.dir\MinSizeRel\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">libmpi_cxx</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">false</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|Win32'">true</GenerateManifest>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">F:\ProjectExt\ompi-examples\RelWithDebInfo\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">libmpi_cxx.dir\RelWithDebInfo\</IntDir>
+    <TargetName Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">libmpi_cxx</TargetName>
+    <TargetExt Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">.dll</TargetExt>
+    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">true</LinkIncremental>
+    <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|Win32'">true</GenerateManifest>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <AdditionalIncludeDirectories>F:\ProjectExt\ompi-examples\ompi-release\contrib\platform\win32;F:\ProjectExt\ompi-examples\ompi-release;F:\ProjectExt\ompi-examples\ompi-release\opal;F:\ProjectExt\ompi-examples\ompi-release\opal\include;F:\ProjectExt\ompi-examples\ompi-release\ompi;F:\ProjectExt\ompi-examples\ompi-release\ompi\include;F:\ProjectExt\ompi-examples\ompi-release\orte;F:\ProjectExt\ompi-examples\ompi-release\orte\include;F:\ProjectExt\ompi-examples;F:\ProjectExt\ompi-examples\opal;F:\ProjectExt\ompi-examples\opal\include;F:\ProjectExt\ompi-examples\ompi;F:\ProjectExt\ompi-examples\ompi\include;F:\ProjectExt\ompi-examples\orte;F:\ProjectExt\ompi-examples\orte\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -97,7 +97,7 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR="Debug";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_XKEYCHECK_H;OMPI_TIMESPEC;WIN32;_WINDOWS;_DEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR="Debug";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
     </ClCompile>
     <ResourceCompile>
@@ -121,7 +121,8 @@
       <ImportLibrary>F:/ProjectExt/ompi-examples/Debug/libmpi_cxxd.lib</ImportLibrary>
       <ProgramDataBaseFile>F:/ProjectExt/ompi-examples/Debug/libmpi_cxxd.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -141,7 +142,8 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR="Release";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
-      <DebugInformationFormat></DebugInformationFormat>
+      <DebugInformationFormat>
+      </DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR=\"Release\";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -164,7 +166,8 @@
       <ImportLibrary>F:/ProjectExt/ompi-examples/Release/libmpi_cxx.lib</ImportLibrary>
       <ProgramDataBaseFile>F:/ProjectExt/ompi-examples/Release/libmpi_cxx.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -184,7 +187,8 @@
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR="MinSizeRel";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
-      <DebugInformationFormat></DebugInformationFormat>
+      <DebugInformationFormat>
+      </DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_USRDLL;OMPI_BUILDING;OMPI_BUILDING_CXX_BINDINGS_LIBRARY=1;OMPI_SKIP_MPICXX=1;OMPI_IMPORTS;OPAL_IMPORTS;CMAKE_INTDIR=\"MinSizeRel\";libmpi_cxx_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -207,7 +211,8 @@
       <ImportLibrary>F:/ProjectExt/ompi-examples/MinSizeRel/libmpi_cxx.lib</ImportLibrary>
       <ProgramDataBaseFile>F:/ProjectExt/ompi-examples/MinSizeRel/libmpi_cxx.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -250,7 +255,8 @@
       <ImportLibrary>F:/ProjectExt/ompi-examples/RelWithDebInfo/libmpi_cxx.lib</ImportLibrary>
       <ProgramDataBaseFile>F:/ProjectExt/ompi-examples/RelWithDebInfo/libmpi_cxx.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
-      <Version></Version>
+      <Version>
+      </Version>
     </Link>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
@@ -288,12 +294,12 @@
     <ClInclude Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\topology_inln.h" />
     <ClInclude Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\win.h" />
     <ClInclude Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\win_inln.h" />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\comm.cc"  />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\datatype.cc"  />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\file.cc"  />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\intercepts.cc"  />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\mpicxx.cc"  />
-    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\win.cc"  />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\comm.cc" />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\datatype.cc" />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\file.cc" />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\intercepts.cc" />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\mpicxx.cc" />
+    <ClCompile Include="F:\ProjectExt\ompi-examples\ompi-release\ompi\mpi\cxx\win.cc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="F:/ProjectExt/ompi-examples/ompi/libmpi.vcxproj">
