add ring example and see global_wait how to attach and debug

--- a/play-examples/connectivity/connectivity.vcxproj
+++ b/play-examples/connectivity/connectivity.vcxproj
@@ -71,7 +71,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)../ompi-release/installed/bin</OutDir>
+    <OutDir>F:\ProjectExt\ompi-examples\ompi-release\installed\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
